<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/text_email_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/josefinsansregular"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:autofillHints="email">
    </EditText>

    <EditText
        android:id="@+id/text_password_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefinsansregular"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email_login"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="password">
    </EditText>

    <Button
        android:id="@+id/button_signin_login"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/josefinsansregular"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/josefinsansregular"
        android:text="@string/forgotpass"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>
