<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:fontFamily="@font/josefinsansregular"
        android:hint="@string/username"
        android:id="@+id/button_username_create"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textColor="#737373"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:autofillHints="no">
    </EditText>

    <EditText
        android:fontFamily="@font/josefinsansregular"
        android:id="@+id/button_password_create"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/password"
        android:textColor="#737373"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_email_create"
        android:inputType="textPassword"
        android:autofillHints="no"
        android:hint="@string/password">
    </EditText>

    <EditText
        android:fontFamily="@font/josefinsansregular"
        android:id="@+id/button_email_create"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/email"
        android:textColor="#737373"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_username_create"
        android:inputType="textEmailAddress"
        android:autofillHints="no"
        android:hint="@string/phone">
    </EditText>

    <Button
        android:id="@+id/create_account_create"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/josefinsansregular"
        android:text="@string/Login2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>
